Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89177

MacOS Dark Mode button text is not contrast enough to be readable

    XMLWordPrintable

Details

    • macOS
    • b7150d22c8ea6349b5d1fd61d5059e0fbe2745ed (qt/qtbase/dev) cb3312ac4e4c72cded00e59177e43091ac2806f3 (qt/qtbase/6.2) 3283d6e816cf5053a43ff38406a243dda6503fd1 (qt/qtbase/6.1)

    Description

      if we run QtQuick gallery example in dark mode, button text color also goes dark and hence not readable. This can be seen on BigSur as well on lower version.

      Attachments

        1. Figure (1).pdf
          157 kB
          Irfan Omair
        2. Screen Shot 2020-12-07 at 5.45.54 PM.png
          169 kB
          Irfan Omair
        3. Screen Shot 2020-12-07 at 5.46.34 PM.png
          183 kB
          Irfan Omair
        For Gerrit Dashboard: QTBUG-89177
        # Subject Branch Project Status CR V

        Activity

          People

            richard Richard Moe Gustavsen
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes